<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="@dimen/large_margin"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/large_textSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/usage"
        app:layout_constraintStart_toStartOf="@id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <TextView
        android:id="@+id/txt_app_usage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin2"
        android:text="@string/apps_usage"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_textSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@id/imageView3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <Switch
        android:id="@+id/charge_alarm"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="@dimen/normal_margin3"
        app:layout_constraintEnd_toEndOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/service_switch_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charge_alarm"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_textSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/charge_alarm"
        app:layout_constraintStart_toEndOf="@id/charge_alarm"
        app:layout_constraintTop_toTopOf="@+id/charge_alarm" />

</androidx.constraintlayout.widget.ConstraintLayout>