<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splash_background"
        tools:context=".activity.MainActivity">

        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:src="@drawable/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:cpb_background_progressbar_color="@color/black"
            app:cpb_background_progressbar_width="5dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="#0CAF13"
            app:cpb_progressbar_width="10dp"
            app:cpb_round_border="false"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <ImageView
            android:id="@+id/battery_img"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/normal_charge"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
            app:layout_constraintStart_toStartOf="@+id/circularProgressBar" />

        <TextView
            android:id="@+id/charge_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/large_textSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/battery_img"
            app:layout_constraintStart_toStartOf="@+id/battery_img"
            app:layout_constraintTop_toBottomOf="@+id/battery_img" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.225" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/base_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/info_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/base_guideline">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.50" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.75" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_txt"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_textSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline1"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/voltage"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/guideline1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:text="@string/voltage"
                android:textColor="@color/info_title"
                android:textSize="@dimen/normal_textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/image1"
                app:layout_constraintTop_toTopOf="@id/image1" />

            <TextView
                android:id="@+id/voltage_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/normal_textSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/image1"
                app:layout_constraintStart_toEndOf="@id/image1" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/technology"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/guideline1" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:text="@string/technology"
                android:textColor="@color/info_title"
                android:textSize="@dimen/normal_textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/image2"
                app:layout_constraintTop_toTopOf="@id/image2" />

            <TextView
                android:id="@+id/technology_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/normal_textSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/image2"
                app:layout_constraintStart_toEndOf="@id/image2" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/plugin"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:text="@string/plug_state"
                android:textColor="@color/info_title"
                android:textSize="@dimen/normal_textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/image3"
                app:layout_constraintTop_toTopOf="@id/image3" />

            <TextView
                android:id="@+id/plugin_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/normal_textSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/image3"
                app:layout_constraintStart_toEndOf="@id/image3" />

            <ImageView
                android:id="@+id/image4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/temperature"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:text="@string/temperature"
                android:textColor="@color/info_title"
                android:textSize="@dimen/normal_textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/image4"
                app:layout_constraintTop_toTopOf="@id/image4" />

            <TextView
                android:id="@+id/temperature_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/normal_textSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/image4"
                app:layout_constraintStart_toEndOf="@id/image4" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#99FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/guideline1"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline5" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/normal_margin"
                android:background="#99FFFFFF"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline5" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#99FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline4" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/normal_margin2"
                android:background="@drawable/health_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/img_health"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/healthcare"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txt_health"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_textSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@+id/img_health"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_menu"
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:clickable="true"
        android:fitsSystemWindows="true"
        android:focusable="true">

        <include
            android:id="@+id/inc_drawer"
            layout="@layout/drawer_layout" />
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
